tests/codegen/fail/input_object/struct/derive_no_fields.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
struct Object {}

fn main() {}
