tests/codegen/fail/input_object/struct/derive_no_fields.stderr
error: GraphQL input object expected at least 1 non-ignored field
 --> fail/input_object/struct/derive_no_fields.rs:4:15
  |
4 | struct Object {}
  |               ^^
